migrate db and add buttons

--- a/src/_style/appcontent.scss
+++ b/src/_style/appcontent.scss
@@ -11,9 +11,12 @@
 
 .container {
     height: 666px;
-    //margin: 20px;
 }
 
 .footer {
     text-align: center;
+}
+
+.collection-select {
+    width: 155px;
 }
